2001-11-20  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/ServerSocketChannel.java (write,
	flush): Remove overridden methods that attempted to
	provide channel specific error messages. The write
	and flush methods in the super class provide error
	messages that are compatible with Tcl.

2001-11-20  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/Channel.java (getNextDescriptor):
	Move the getNextDescriptor method into the TclIO class.
	Update documentation for Channel class.
	* src/jacl/tcl/lang/FileChannel.java:
	* src/jacl/tcl/lang/ServerSocketChannel.java:
	* src/jacl/tcl/lang/SocketChannel.java:
	Invoke TclIO.getNextDescriptor from TclIO class.
	* src/jacl/tcl/lang/TclIO.java (getNextDescriptor):
	Add getNextDescriptor method from Channel class.

2001-11-19  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/Channel.java (read): Turn the
	read method into a concrete implementation instead
	of an abstract method.
	* src/jacl/tcl/lang/FileChannel.java (read):
	* src/jacl/tcl/lang/ServerSocketChannel.java (read):
	* src/jacl/tcl/lang/SocketChannel.java (read):
	* src/jacl/tcl/lang/StdChannel.java (read): Make use
	of super class read method instead of including
	read logic in each Channel subclass.

2001-11-19  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/Channel.java (close): Fix silly
	cut and paste error that was closing the underlying
	channel twice.

2001-11-19  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/Channel.java (tell): Turn the tell
	method into a concrete implementation instead of an
	abstract method. It currently just returns -1.
	* src/jacl/tcl/lang/ServerSocketChannel.java (tell):
	* src/jacl/tcl/lang/SocketChannel.java (tell):
	* src/jacl/tcl/lang/StdChannel.java (tell):
	Remove tell command since it is now handled in the
	super class.

2001-11-19  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/Channel.java (seek): Properly indent